Reset animation for dragged tabs.

When dragging ends, an animation for tabs runs.
If ideal bounds for tabs changes when the animation is running,
We should restart animation with newly calculated bounds.

Bug: 848016
Change-Id: I1b5fff8d3bcd02fbe2d39f847c77e9c5df3c01c2
Reviewed-on: https://chromium-review.googlesource.com/1084521
Commit-Queue: Sang Woo Ko <sangwoo108@chromium.org>
Reviewed-by: Peter Kasting <pkasting@chromium.org>
Cr-Commit-Position: refs/heads/master@{#565567}
Former-commit-id: a0d1989ee45f551651ad4f5f6189114da4c906b4